--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css" />
 
 
-    <title>NuCamp: A Better Way To Camp</title>
+    <title>NuCamp: A Better Way To  do Camp</title>
 </head>
 
 <body>
